--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,8 @@ body{
 .align-items{ align-items: center;}
 
 
-.wrap-1{ background: #212121bf; border-bottom: 1px solid #ffffff38; color: #fff; position: fixed; left: 0; width: 100%; top: 0; }
+
+.wrap-1{ background: #212121bf; border-bottom: 1px solid #ffffff38; color: #fff; position: fixed; left: 0; width: 100%; top: 0; z-index: 1; }
 .menu{ background: none; border: none; width: 74px; height: 74px; font-size: 24px; color: inherit;}
 .bl{ border-left: 1px solid #ffffff38;}
 .wrap-1 h1{ padding: 0 20px; font-family: var(--pop); }
@@ -53,19 +54,62 @@ body{
 .social a{ font-size: 24px;  }
 
 
-.wrap-2{ background: url(../img/bg-1.webp) no-repeat center/cover; aspect-ratio: 2/1; }
+.wrap-2{ background: url(../img/bg-1.webp) no-repeat center/cover; color: #fff; padding: 200px 0; text-align: center; }
+.wrap-2 h2{ font-size: 200px;  line-height: .75; letter-spacing: -15px;}
+.wrap-2 p{ font-size: 20px; font-weight: bold; }
+.wrap-2 p{ margin: 34px 0 59px;}
+.btn{ width: 159px; height: 48px; background: #3954d9; border: none; border-radius: 24px; color: #fff; }
 
+
+.wrap-3{ background: #fff;}
+.wrap-3 .container{ position: relative; top: -73px; margin-bottom: -160px; background: #fff; box-shadow: 0 0 10px gray; }
+
+.grid{ display: grid;}
+.place-item-center{ place-items: center;}
+.h100{ height: 100%;}
+
+.grid1{ display: grid; grid-template-columns: repeat(4, 1fr); gap: 1px; background: #c7c7c7; margin: 0 -1rem; }
+.grid1 .col{ background: #fff; text-align: center; padding: 80px 40px;}
+
+.grid2{ display: grid; grid-template-columns: repeat(2, 1fr); background: #f2f0f0; margin: 0 -1rem; text-align: center; }
+.grid2 img{ width: 100%; height: 100%; }
+.grid2 h2{ margin: 35px 0 25px; font-size: 43px; color: #0d2e57;}
+.grid2 .offer{ font-size: 20px;}
+.grid2 p{ font-size: 13px; font-weight: 300; color: #8a8a8a; line-height: 24px;}
+.grid2 .btn{ margin-top: 40px;}
+
+
+.grid3{ display: grid; grid-template-columns: repeat(4, 1fr); gap: 1px; background: #c7c7c7; margin: 0 -1rem; text-align: center;}
+.grid3 .col{ background: #fff; position: relative;} 
+.caption{ position: absolute; inset: 0; text-align: left; color: #fff; }
+.grid3 .col-2x{ grid-row: 2; grid-column: 3/5; }
+.grid3 .col-2x img{ max-width: 100%; height: auto;}
+
+.grid4{ text-align: center; padding: 20px 0; }
+
+.grid5{ display: grid; grid-template-columns: repeat(4, 1fr); margin: 0 -1rem; }
+.grid5 img{ width: 100%; height: auto;}
+
+
+.grid6{ display: grid; grid-template-columns: repeat(6, 1fr); margin: 0 -1rem;  }
+.grid6 .col{ aspect-ratio: 1/1; display: grid; place-items: center; }
+.grid6 img{ max-width: 100%; height: auto;}
+
+
+.wrap-4{ background: url(../img/bg-2.webp) #232323; padding: 190px 0 90px; color: #fff;}
 
 
 /* responsive */
 @media screen and (max-width:1520px){
     .wrap-1 h1{ padding: 0 10px;}
+    .container{ max-width: 1320px;}
 }
 @media screen and (max-width:1220px){
     html{ font-size: 14px;}
     .wrap-1 h1 a{ font-size: 30px;}
     .wrap-1 li{ margin: 0 3px;}
     .wrap-1 a{ padding: 0 6px;}
+    .wrap-2 h2{ font-size: 150px;}
 }
 @media screen and (max-width:980px){
     .col-t-3{ flex-basis: 25%; max-width: 25%;}
@@ -73,11 +117,17 @@ body{
     .col-t-6{ flex-basis: 50%; max-width: 50%;}
     .col-t-12{ flex-basis: 100%; max-width: 100%;}
     .wrap-1 nav{ display: none;}
+    .wrap-2{ padding: 100px 0;}
+    .grid2 h2{ margin: 15px 0 5px;}
+    
 }
 
 @media screen and (max-width:767px){
     html{ font-size: 13px;}
     .col-m-6{ flex-basis: 50%; max-width: 50%;}
+    
+    .grid1 .col{ padding: 40px 20px;}
+    .grid2{ grid-template-columns: repeat(1,1fr) ; }
 }
 
 @media screen and (max-width:460px){
@@ -86,4 +136,6 @@ body{
     .col-p-12{ flex-basis: 100%; max-width: 100%;}
     .social{ display: none;}
     .wrap-1 h1 a{ font-size: 22px;}
+    .wrap-2 h2{ font-size: 100px; letter-spacing: -8px;}
+    .grid1{ grid-template-columns: repeat(2, 1fr);}
 }
